# appstpa

./: Constant.py  README.md  app.py  mainwindow.ui  pyproject.toml  requirements.txt  ui_mainwindow.py
.github/workflows/: release.yml
Database/: DB.py  Ontology_DB-20220110_first_req.db  Ontology_DB.db  Ontology_DB_bkp.db  Ontology_DB_bkp_2024-02-29.db  Ontology_DB_insulin_with_patient_req.db  Ontology_DB_ventilator.db  sql_query.sql  sql_security.sql
Database/business/: DB_Bus_Requirement.py
Database/conflict/: DB_Conflict.py
Database/performance/: DB_Bus_Pef_Requirement.py  DB_Pef_Performance_Resource.py  DB_Pef_Res_Requirement.py  DB_Saf_Pef_Requirement.py  DB_Sec_Pef_Requirement.py
Database/safety/: DB_Actions.py  DB_Assumptions.py  DB_Components.py  DB_Components_Links.py  DB_Hazards.py  DB_Loss_Scenario_Req.py  DB_Saf_Priority.py  DB_Safety_Constraints.py  DB_Variables_Values.py
Database/security/: DB_Sec_Stride.py  DB_Sec_Stride_DFD.py  DB_Sec_Stride_Priority.py  DB_Sec_Stride_Requirement.py  DB_Sec_Stride_Requirement_Import.py
Objects/Business/: Business.py
Objects/Performance/: Pef_Requirement.py
Objects/security/: Stride.py  Stride_DFD.py  Stride_Priority.py  Stride_Requirement.py  Stride_control.py
Tools/: Dictionary.py  General_tools.py  PdfTools.py  Safety_tools_new.py  Security_tools_new.py
