[project]
name = "AppSTPA"
version = "3.0.1"
description = "A tool for safety analysis"
readme = "README.md"
requires-python = ">=3.12"
classifiers = ["Private :: Do Not Upload"]

dependencies = [
    "altgraph==0.17.5",
    "blinker==1.9.0",
    "click==8.3.3",
    "colorama==0.4.6",
    "flask==3.1.3",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "pefile==2024.8.26",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.18",
    "pyqt5-sip==12.18.0",
    "pyuic5-tool==0.0.1",
    "pywin32-ctypes==0.2.3",
    "reportlab==4.5.0",
    "werkzeug==3.1.8",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pyinstaller>=6.20.0",
    "pyinstaller-hooks-contrib>=2026.5",
    "ruff>=0.15.12",
]
